_sass/patterns/_form.scss
// Form
// -----------------------------------------------------------------------------
//
// 1. Removes ugly rounding for Safari in iOS
//

.form {
  &__fieldset {
    border: 0;
    padding: 0;
  }

  &__group {
    margin-bottom: $form-group-mb;

    &--inline .form__label {
      display: inline-block;
      margin-bottom: 0;
    }
  }

  &__label {
    display: block;
    margin-bottom: $form-label-mb;
    font-family: $form-label-ff;
    font-size: $form-label-fz;
    font-weight: $form-label-fw;
    color: $form-label-c;
    letter-spacing: 1px;
    text-align: left;

    &.is-required:after {
      content: '*';
    }
  }

  &__field {
    @include field-and-textarea($form-field-ht);
    border-top: 0;
    border-right: 0;
    border-bottom: $br-base solid $c-lynch;
    border-left: 0;
    border-radius: 0; // 1
  }

  &__textarea {
    @include field-and-textarea($form-textarea-ht);
    border: $br-base solid $c-lynch;
    border-radius: $brr-small;
    resize: none;
  }

  &__checkbox {
    display: inline-block;
    margin-right: $sp-xxsmall;
    vertical-align: middle;
  }
}

